# Vortek-Engine

./: .gitignore  CMakeLists.txt  LICENSE  README.md  Vortek Engine.sln
VORTEK_CORE/: CMakeLists.txt  README.md  VORTEK_CORE.vcxproj  VORTEK_CORE.vcxproj.filters.txt
VORTEK_CORE/Core/CoreUtilities/: CoreEngineData.cpp  CoreEngineData.h  EngineShaders.h  FollowCamera.cpp
VORTEK_CORE/Core/ECS/: Entity.cpp  Entity.h  Entity.inl  MainRegistry.cpp  MainRegistry.h  MetaUtilities.cpp  MetaUtilities.h  Registry.h  Registry.inl
VORTEK_CORE/Core/ECS/Components/: AllComponents.h  AnimationComponent.cpp  AnimationComponent.h  BoxColliderComponent.cpp  BoxColliderComponent.h  CircleColliderComponent.cpp  Identification.h  (+13 more)
VORTEK_CORE/Core/Events/: EventDispatcher.h
VORTEK_CORE/Core/Loaders/: TilemapLoader.cpp  TilemapLoader.h
VORTEK_CORE/Core/Resources/: AssetManager.h
VORTEK_CORE/Core/Scripting/: ContactListenerBind.cpp  ContactListenerBind.h  GlmLuaBindings.cpp  RendererBindings.cpp  RendererBindings.h  UserDataBindings.cpp  UserDataBindings.inl
VORTEK_CORE/Core/States/: StateMachine.cpp
VORTEK_CORE/Core/Systems/: AnimationSystem.h  RenderShapeSystem.h  RenderSystem.cpp  RenderSystem.h  ScriptingSystem.cpp  ScriptingSystem.h
VORTEK_CORE/src/Character/: Character.cpp  PlayerStart.cpp
VORTEK_CORE/src/CoreUtilities/: CoreEngineData.cpp  CoreUtilities.cpp  FollowCamera.cpp  Prefab.cpp  ProjectInfo.cpp
VORTEK_CORE/src/ECS/: ECSUtils.cpp  Entity.cpp  MainRegistry.cpp  MetaUtilities.cpp  Registry.cpp
VORTEK_CORE/src/Events/: EngineEventTypes.cpp  EventDispatcher.cpp
VORTEK_CORE/src/Loaders/: TilemapLoader.cpp
VORTEK_CORE/src/Resources/: AssetManager.cpp
VORTEK_CORE/src/Scene/: Scene.cpp  SceneManager.cpp
VORTEK_CORE/src/Scripting/: ContactListenerBind.cpp  CrashLoggerTestBindings.cpp  GlmLuaBindings.cpp  InputManager.cpp  LuaFilesystemBindings.cpp  RendererBindings.cpp  ScriptingUtilities.cpp  SoundBindings.cpp  UserDataBindings.cpp
VORTEK_CORE/src/States/: State.cpp  StateMachine.cpp  StateStack.cpp
VORTEK_CORE/src/Systems/: AnimationSystem.cpp  PhysicsSystem.cpp  RenderPickingSystem.cpp  RenderShapeSystem.cpp  RenderSystem.cpp  RenderUISystem.cpp  ScriptingSystem.cpp
VORTEK_EDITOR/: CMakeLists.txt  README.md  VORTEK_EDITOR.APS  VORTEK_EDITOR.vcxproj  VORTEK_EDITOR.vcxproj.filters.txt  imgui.ini
VORTEK_EDITOR/assets/shaders/: basicShader.vert  circleShader.frag  circleShader.vert  fontShader.frag  fontShader.vert
VORTEK_EDITOR/assets/tiled_maps/: test_platformer.tiled-session  test_platformer.tmx  testmap.tiled-session  testmap.tmx
VORTEK_EDITOR/src/: Application.cpp  Application.h  main.cpp
VORTEK_EDITOR/x64/Debug/: vc143.idb
VORTEK_ENGINE/: CMakeLists.txt  README.md
VORTEK_ENGINE/src/: Runtime.cpp  Runtime.h  main.cpp
VORTEK_FILESYSTEM/: CMakeLists.txt  README.md  VORTEK_FILESYSTEM.vcxproj  VORTEK_FILESYSTEM.vcxproj.filters
VORTEK_FILESYSTEM/Dialogs/: FileDialog.h
VORTEK_FILESYSTEM/Serializers/: JSONSerializer.h  JSONSerializer.inl  LuaSerializer.cpp  LuaSerializer.h  LuaSerializer.inl
VORTEK_FILESYSTEM/src/: DirectoryWatcher.cpp  FileDialog.cpp  FileProcessor_Unix.cpp  FileProcessor_Win.cpp  FilesystemUtilities.cpp  JSONSerializer.cpp  LuaSerializer.cpp
VORTEK_FILESYSTEM/src/Dialogs/: FileDialog.cpp
VORTEK_FILESYSTEM/src/Serializers/: JSONSerializer.cpp  JSONSerializer.inl
VORTEK_LOGGER/: CMakeLists.txt  README.md  VORTEK_LOGGER.vcxproj
VORTEK_LOGGER/Logger/: Logger.h
VORTEK_LOGGER/include/Logger/: CrashLogger.h  Logger.h  Logger.inl
VORTEK_LOGGER/src/: CrashLogger.cpp  Logger.cpp
VORTEK_LOGGER/src/Logger/: Logger.cpp  Logger.h  Logger.inl
VORTEK_PHYSICS/: CMakeLists.txt  README.md  VORTEK_PHYSICS.vcxproj
VORTEK_PHYSICS/Physics/: Box2DWrappers.cpp  ContactListener.cpp  ContactListener.h  PhysicsUtilities.cpp
VORTEK_PHYSICS/include/Physics/: Box2DWrappers.h  BoxTraceCallback.h  ContactListener.h  PhysicsUtilities.h  RayCastCallback.h  UserData.h
VORTEK_PHYSICS/src/: Box2DWrappers.cpp  BoxTraceCallback.cpp  ContactListener.cpp  PhysicsUtilities.cpp  RayCastCallback.cpp  UserData.cpp
VORTEK_PHYSICS/src/Physics/: Box2DWrappers.h  ContactListener.cpp  PhysicsUtilities.cpp  PhysicsUtilities.h  UserData.cpp  UserData.h
VORTEK_RENDERING/: CMakeLists.txt  README.md  VORTEK_RENDERING.vcxproj  VORTEK_RENDERING.vcxproj.filters.txt
VORTEK_RENDERING/Rendering/Core/: BatchRenderer.cpp  BatchRenderer.h  Camera2D.cpp
VORTEK_RENDERING/Rendering/Essentials/: Font.cpp  FontLoader.cpp  Primitives.h  Texture.cpp  Texture.h  TextureLoader.cpp  Vertex.h
VORTEK_RENDERING/src/: BatchRenderer.cpp  Camera2D.cpp  CircleBatchRenderer.cpp  Font.cpp  FontLoader.cpp  Framebuffer.cpp  LineBatchRenderer.cpp  OpenGLDebugger.cpp  PickingBatchRenderer.cpp  PickingTexture.cpp  RectBatchRenderer.cpp  Renderer.cpp  Shader.cpp  ShaderLoader.cpp  TextBatchRenderer.cpp  Texture.cpp  TextureLoader.cpp
VORTEK_SOUNDS/: CMakeLists.txt  README.md  VORTEK_SOUNDS.vcxproj  VORTEK_SOUNDS.vcxproj.filters.txt
VORTEK_SOUNDS/src/: Music.cpp  MusicPlayer.cpp  SoundFX.cpp  SoundFxPlayer.cpp
VORTEK_UTILITIES/: CMakeLists.txt  README.md  VORTEK_UTILITIES.vcxproj  VORTEK_UTILITIES.vcxproj.filters.txt
VORTEK_UTILITIES/VortekUtilities/: HelperUtilities.h  RandomGenerator.cpp  RandomGenerator.h  VortekUtilities.cpp  VortekUtilities.h
VORTEK_UTILITIES/include/VortekUtilities/: HelperUtilities.h  MathUtilities.h  RandomGenerator.h  SDL_Wrappers.h  ThreadPool.h  Timer.h  Tween.h  VortekUtilities.h
VORTEK_UTILITIES/src/: RandomGenerator.cpp  SDL_Wrappers.cpp  Timer.cpp  Tween.cpp  VortekUtilities.cpp
VORTEK_UTILITIES/src/VortekUtilities/: SDL_Wrappers.cpp  SDL_Wrappers.h  Timer.cpp  Timer.h  VortekUtilities.h
VORTEK_WINDOW/: CMakeLists.txt  README.md  VORTEK_WINDOW.vcxproj
VORTEK_WINDOW/Windowing/Inputs/: Button.cpp  Gamepad.cpp  Keyboard.cpp  Keys.h  Mouse.cpp  Mouse.h
VORTEK_WINDOW/Windowing/Window/: Window.cpp
VORTEK_WINDOW/src/: Button.cpp  Gamepad.cpp  Keyboard.cpp  Mouse.cpp  Window.cpp
Vortek Engine/: CMakeLists.txt  CMakeSettings.json  README.md
(+510 files in other folders)
